running dev-env mounts current directory as /src

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,5 @@ version: '3.6'
 services:
   dev-env:
     image: cadizm/dev-env
-    environment:
-      HOME: /src
     volumes:
-      - ~/workspace/src:/src
+      - $PWD:/src
